--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 input {
     width: 100%;
     height: 1.2rem;
-    padding: 0.2rem;
+    padding: 0.2rem 0.4rem;
 }
 
 button {
@@ -37,6 +37,7 @@ button {
 
 .item {
     display: flex;
+    align-items: center;
 }
 
 .icon {
