--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 16px;
+}
+
+h2 {
+    margin-bottom: 0.2rem;
 }
 
 img {
@@ -8,7 +16,7 @@ img {
 
 input {
     width: 100%;
-    height: 1.2rem;
+    height: 2rem;
     padding: 0.2rem 0.4rem;
 }
 
@@ -44,7 +52,6 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.3rem;
     width: 2rem;
     height: 2rem;
     flex-shrink: 0;
@@ -62,4 +69,5 @@ button {
     align-items: center;
     margin-left: 0.5rem;
 }
+
 
